Removed Absolute Grid
Replaced the old absolute Grid with a proper CSS grid for each sheet

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -172,475 +172,6 @@ hr
 	display: none;
 }
 
-/*Grid*/
-div.sheet-rowTop
-{
-	position: static;
-}
-
-div.sheet-row50
-{
-	position: absolute;
-	top: 50px;
-}
-
-div.sheet-row275
-{
-	position: absolute;
-	top: 275px;
-}
-
-div.sheet-row300
-{
-	position: absolute;
-	top: 300px;
-}
-
-div.sheet-row350
-{
-	position: absolute;
-	top: 350px;
-}
-
-div.sheet-row375
-{
-	position: absolute;
-	top: 375px;
-}
-
-div.sheet-row400
-{
-	position: absolute;
-	top: 400px;
-}
-
-div.sheet-row450
-{
-	position: absolute;
-	top: 450px;
-}
-
-div.sheet-row475
-{
-	position: absolute;
-	top: 475px;
-}
-
-div.sheet-row500
-{
-	position: absolute;
-	top: 500px;
-}
-
-div.sheet-row600
-{
-	position: absolute;
-	top: 600px;
-}
-
-div.sheet-row650
-{
-	position: absolute;
-	top: 650px;
-}
-
-div.sheet-row690
-{
-	position: absolute;
-	top: 690px;
-}
-
-div.sheet-row700
-{
-	position: absolute;
-	top: 700px;
-}
-
-div.sheet-row800
-{
-	position: absolute;
-	top: 800px;
-}
-
-div.sheet-row850
-{
-	position: absolute;
-	top: 850px;
-}
-
-div.sheet-row860
-{
-	position: absolute;
-	top: 860px;
-}
-
-div.sheet-row900
-{
-	position: absolute;
-	top: 900px;
-}
-
-div.sheet-row910
-{
-	position: absolute;
-	top: 910px;
-}
-
-div.sheet-row950
-{
-	position: absolute;
-	top: 950px;
-}
-
-div.sheet-row1000
-{
-	position: absolute;
-	top: 1000px;
-}
-
-div.sheet-row1050
-{
-	position: absolute;
-	top: 1050px;
-}
-
-div.sheet-row1100
-{
-	position: absolute;
-	top: 1100px;
-}
-
-div.sheet-row1150
-{
-	position: absolute;
-	top: 1150px;
-}
-
-div.sheet-row1200
-{
-	position: absolute;
-	top: 1200px;
-}
-
-div.sheet-row1250
-{
-	position: absolute;
-	top: 1250px;
-}
-
-div.sheet-row1300
-{
-	position: absolute;
-	top: 1300px;
-}
-
-div.sheet-row1350
-{
-	position: absolute;
-	top: 1350px;
-}
-
-div.sheet-row1400
-{
-	position: absolute;
-	top: 1400px;
-}
-
-div.sheet-row1430
-{
-	position: absolute;
-	top: 1430px;
-}
-
-div.sheet-row1450
-{
-	position: absolute;
-	top: 1450px;
-}
-
-div.sheet-row1500
-{
-	position: absolute;
-	top: 1500px;
-}
-
-div.sheet-row1550
-{
-	position: absolute;
-	top: 1550px;
-}
-
-div.sheet-row1575
-{
-	position: absolute;
-	top: 1575px;
-}
-
-div.sheet-row1600
-{
-	position: absolute;
-	top: 1600px;
-}
-
-div.sheet-row1650
-{
-	position: absolute;
-	top: 1650px;
-}
-
-div.sheet-row1700
-{
-	position: absolute;
-	top: 1700px;
-}
-
-div.sheet-row1780
-{
-	position: absolute;
-	top: 1780px;
-}
-
-div.sheet-row1800
-{
-	position: absolute;
-	top: 1800px;
-}
-
-div.sheet-row1850
-{
-	position: absolute;
-	top: 1850px;
-}
-
-div.sheet-row1890
-{
-	position: absolute;
-	top: 1890px;
-}
-
-div.sheet-row1900
-{
-	position: absolute;
-	top: 1900px;
-}
-
-div.sheet-row1950
-{
-	position: absolute;
-	top: 1950px;
-}
-
-div.sheet-row2000
-{
-	position: absolute;
-	top: 2000px;
-}
-
-div.sheet-row2100
-{
-	position: absolute;
-	top: 2100px;
-}
-
-div.sheet-row2150
-{
-	position: absolute;
-	top: 2150px;
-}
-
-div.sheet-row2200
-{
-	position: absolute;
-	top: 2200px;
-}
-
-div.sheet-row2250
-{
-	position: absolute;
-	top: 2250px;
-}
-
-div.sheet-row2300
-{
-	position: absolute;
-	top: 2300px;
-}
-
-div.sheet-row2400
-{
-	position: absolute;
-	top: 2400px;
-}
-
-div.sheet-row2500
-{
-	position: absolute;
-	top: 2500px;
-}
-
-div.sheet-row2550
-{
-	position: absolute;
-	top: 2550px;
-}
-
-div.sheet-row2600
-{
-	position: absolute;
-	top: 2600px;
-}
-
-div.sheet-row2650
-{
-	position: absolute;
-	top: 2650px;
-}
-
-
-div.sheet-row2700
-{
-	position: absolute;
-	top: 2700px;
-}
-
-div.sheet-row2750
-{
-	position: absolute;
-	top: 2750px;
-}
-
-div.sheet-row2800
-{
-	position: absolute;
-	top: 2800px;
-}
-
-div.sheet-row2850
-{
-	position: absolute;
-	top: 2850px;
-}
-
-div.sheet-row2900
-{
-	position: absolute;
-	top: 2900px;
-}
-
-div.sheet-row2950
-{
-	position: absolute;
-	top: 2950px;
-}
-
-div.sheet-row3000
-{
-	position: absolute;
-	top: 3000px;
-}
-
-div.sheet-row3100
-{
-	position: absolute;
-	top: 3100px;
-}
-
-div.sheet-row3200
-{
-	position: absolute;
-	top: 3200px;
-}
-
-div.sheet-row3300
-{
-	position: absolute;
-	top: 3300px;
-}
-
-div.sheet-columnLeft
-{
-	justify-content: space-between;
-	position: absolute;
-	left: auto;
-}
-
-div.sheet-column200
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 200px;
-}
-
-div.sheet-column225
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 225px;
-}
-
-div.sheet-column300
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 300px;
-}
-
-div.sheet-column400
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 400px;
-}
-
-div.sheet-column450
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 450px;
-}
-
-div.sheet-column475
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 475px;
-}
-
-div.sheet-column485
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 485px;
-}
-
-div.sheet-column500
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 500px;
-}
-
-div.sheet-column570
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 570px;
-}
-
-div.sheet-column600
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 600px;
-}
-
-div.sheet-column700
-{
-	justify-content: space-between;
-	position: absolute;
-	left: 700px;
-}
-
 /*select & text boxes*/
 select, textarea, input[type="text"], input[type="number"]
 {
@@ -768,42 +299,30 @@ textarea
 		width: 95%;
 	}
 
-/* Aspects */
-div.sheet-fullPage
+/* Master Grids */
+
+.sheet-crewmemberSheetGrid
 {
 	width: 900px;
-	box-sizing: content-box;
+	display: grid;
+	grid-row-gap: 6px;
+	grid-template-columns: 1fr;
+	grid-template-rows: 165px 420px 620px 105px 215px 390px 440px;
+	grid-template-areas: "crewTop" "skills" "crewKit" "description" "language" "contactNotes" "retirement";
+	justify-items: start;
+	align-items: start;
 }
 
-div.sheet-twoThirdPage
+.sheet-shipSheetGrid
 {
-	width: 600px;
-	box-sizing: content-box;
-}
-
-div.sheet-threeQuarterPage
-{
-	width: 700px;
-	box-sizing: content-box;
-}
-
-div.sheet-halfPage
-{
-	width: 430px;
-	box-sizing: content-box;
-}
-
-/*Departments, skills, specialties, tools*/
-div.sheet-thirdPage
-{
-	width: 280px;
-	box-sizing: content-box;
-}
-
-div.sheet-quarterPage
-{
-	width: 200px;
-	box-sizing: content-box;
+	width: 900px;
+	display: grid;
+	grid-row-gap: 6px;
+	grid-template-columns: 1fr;
+	grid-template-rows: 50px 360px 375px 375px 1200px;
+	grid-template-areas: "aspects" "systemsAmenities" "modules" "shipConfig" "pg2";
+	justify-items: start;
+	align-items: start;
 }
 
 /* ******************************* */
@@ -811,12 +330,13 @@ div.sheet-quarterPage
 /* ******************************* */
 .sheet-crewTop
 {
+	grid-area: crewTop;
 	width: 900px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 28px 1fr;
 	grid-gap: 0px;
-	height: 120px;
+	height: 165px;
 	grid-template-areas: "ID ID" "crewAspect crewSpecies";
 }
 
@@ -1005,12 +525,12 @@ div.sheet-quarterPage
 
 .sheet-shipAspects
 {
-	width: 890px;
-	padding: 5px;
+	grid-area: aspects;
+	width: 900px;
 	display: grid;
 	grid-template-columns: repeat(2,90px 30px 1fr);
 	grid-template-rows: 18px 15px 15px;
-	grid-gap: 0px;
+	grid-column-gap: 4px;
 	height: 50px;
 	z-index: 0;
 }
@@ -1149,11 +669,12 @@ div.sheet-quarterPage
 /* ******************************* */
 .sheet-skillRow
 {
+	grid-area: skills;
 	width: 900px;
 	display: grid;
 	grid-template-columns: repeat(3,1fr) 220px;
-	grid-template-rows: 36px 1fr 165px 78px;
-	grid-gap: 0px;
+	grid-template-rows: 32px 1fr 160px 78px;
+	grid-gap: 4px;
 	height: 410px;
 	grid-template-areas: "Title Title Title Conditions" "Skills1 Skills2 Skills3 Conditions" "Skills1 Skills2 Skills3 Pathogens" "Skills1 Skills2 Skills3 Upkeep";
 	justify-content: space-evenly;
@@ -1502,14 +1023,20 @@ input[type="number"].sheet-upkeepBox
 /* *************************** */
 .sheet-crewKitWidget
 {
+	grid-area: crewKit;
 	width: 900px;
 	display: grid;
-	grid-template-columns: 540px 184px 181px;
-	grid-template-rows: 155px 155px 1fr;
+	grid-template-columns: 540px 178px 178px;
+	grid-template-rows: 32px 155px 155px 1fr;
 	grid-gap: 4px;
-	height: 582px;
-	grid-template-areas: "Tools1 Augments EVASuit" "Tools2 Augments EVASuit" "Associations Associations Associations";
+	height: 620px;
+	grid-template-areas: "Title Title Title" "Tools1 Augments EVASuit" "Tools2 Augments EVASuit" "Associations Associations Associations";
 	justify-content: space-evenly;
+}
+
+.sheet-crewKitTitle
+{
+	grid-area: Title;
 }
 
 .sheet-Tools1
@@ -1533,7 +1060,7 @@ input[type="number"].sheet-upkeepBox
 	grid-template-rows: 24px 20px 18px 18px 16px 20px 12px 12px 18px 18px 18px 14px 10px 20px 18px 18px 20px 1fr;
 	grid-gap: 0px;
 	height: 312px;
-	width: 177px;
+	width: 178px;
 	padding-top: 4px;
 	padding-left: 4px;
 	z-index: 0;
@@ -1547,7 +1074,6 @@ input[type="number"].sheet-upkeepBox
 	grid-column-end: 5;
 	margin-left: 4px;
 }
-
 
 .sheet-EVAArmourTitle
 {
@@ -1683,14 +1209,14 @@ input[type="number"].sheet-upkeepBox
 {
 	grid-area: Augments;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/augmentation.png);
-	background-size: 183px 314px;
+	background-size: 180px 314px;
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 1fr 1fr 25px 6px;
 	grid-template-rows: 18px 15px 15px repeat(11,1fr);
 	grid-gap: 0px;
 	height: 314px;
-	width: 180px;
+	width: 178px;
 	padding-top: 4px;
 	padding-left: 4px;
 	z-index: 0;
@@ -1981,6 +1507,7 @@ input[type="number"].sheet-upkeepBox
 
 .sheet-descriptionWidget
 {
+	grid-area: description;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/description.png);
 	background-size: 900px 100.5px;
 	background-repeat: no-repeat;
@@ -1988,8 +1515,8 @@ input[type="number"].sheet-upkeepBox
 	grid-template-columns: repeat(2, 90px 1fr) 10px;
 	grid-template-rows: 20px repeat(3,15px) 1fr;
 	grid-gap: 4px;
-	height: 100px;
-	width: 905px;
+	height: 105px;
+	width: 900px;
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
@@ -2050,6 +1577,7 @@ input[type="number"].sheet-upkeepBox
 
 .sheet-languageWidget
 {
+	grid-area: language;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
 	background-size: 900px 212px;
 	background-repeat: no-repeat;
@@ -2058,7 +1586,7 @@ input[type="number"].sheet-upkeepBox
 	grid-template-rows: 20px 18px repeat(10,15px) 1fr;
 	grid-gap: 0px;
 	height: 210px;
-	width: 905px;
+	width: 900px;
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
@@ -2129,8 +1657,20 @@ input[type="number"].sheet-upkeepBox
 	grid-row-end: 3;
 }
 
+.sheet-contactNoteRow
+{
+	grid-area: contactNotes;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr;
+	width: 900px;
+	height: 390px;
+	grid-template-areas: "contact notes";
+}
+
 .sheet-contactWidget
 {
+	grid-area: contact;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/contactNotes.png);
 	background-size: 440px 390px;
 	background-repeat: no-repeat;
@@ -2168,6 +1708,7 @@ input[type="number"].sheet-upkeepBox
 
 .sheet-crewNoteWidget
 {
+	grid-area: notes;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/contactNotes.png);
 	background-size: 440px 390px;
 	background-repeat: no-repeat;
@@ -2191,16 +1732,22 @@ input[type="number"].sheet-upkeepBox
 
 .sheet-retirementWidget
 {
+	grid-area: retirement;
 	display: grid;
 	grid-template-columns: 1fr 4fr;
-	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-areas: "reserve plan" "debt plan" "shares plan";
-	grid-gap: 0px;
-	height: 400px;
+	grid-template-rows: 32px 1fr 1fr 1fr;
+	grid-template-areas: "Title Title" "reserve plan" "debt plan" "shares plan";
+	grid-row-gap: 4px;
+	height: 440px;
 	width: 900px;
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
+}
+
+.sheet-retirementTitle
+{
+	grid-area: Title;
 }
 
 .sheet-retirementPlan
@@ -2218,7 +1765,6 @@ input[type="number"].sheet-upkeepBox
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
-	
 }
 
 .sheet-retirementPlanSummary
@@ -2292,7 +1838,7 @@ input[type="number"].sheet-upkeepBox
 }
 
 input[type="number"].sheet-retirementBox
-{	
+{
 	height: 100%;
 	width: 100%;
 	font-size: 18px;
@@ -2777,10 +2323,33 @@ input[type="checkbox"]:checked + span.sheet-patch
 /* ***************************************** */
 /*               SHIP SYSTEMS                */
 /* ***************************************** */
+.sheet-systemsAmenities
+{
+	grid-area: systemsAmenities;
+	display: grid;
+	width: 900px;
+	height:360px;
+	grid-template-columns: 535px 1fr;
+	grid-template-rows: 1fr;
+	grid-template-areas: "systems amenities";
+	grid-gap: 4px;
+}
+
 .sheet-systemWidget
 {
-	width: 540px;
-	padding: 5px;
+	grid-area: systems;
+	display: grid;
+	width: 535px;
+	height: 352px;
+	grid-template-columns: repeat(3,175px);
+	grid-template-rows: 32px 154px 154px;
+	grid-template-areas: "title title title";
+	grid-gap: 4px;
+}
+
+.sheet-systemWidegetTitle
+{
+	grid-area: title;
 }
 
 .sheet-reactorSystem
@@ -3050,20 +2619,32 @@ input[type="number"].sheet-currentCharge
 /* ***************************************** */
 .sheet-amenitiesWidget
 {
+	grid-area: amenities;
 	width: 362px;
-	padding: 5px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 32px 1fr;
+	grid-template-areas: "title" "amenities";
+	grid-gap: 4px;
+	height: 350px;
+	width: 350px;
 }
 
 .sheet-amenities
 {
+	grid-area: amenities;
 	display: grid;
 	grid-template-columns: 1fr 3fr;
-	grid-template-rows: repeat(24,minmax(12px,15px));
+	grid-template-rows: repeat(20,minmax(12px,15px));
 	grid-gap: 0px;
-	height: 320px;
-	width: 98%;
-	padding-left: 10px;
-	margin-left: 4px;
+	height: 315px;
+	width: 350px;
+	align-self: end;
+}
+
+.sheet-amenitiesTitle
+{
+	grid-area: title;
 }
 
 .sheet-amenityList1
@@ -3210,8 +2791,19 @@ input[type="number"].sheet-currentCharge
 /* ***************************************** */
 .sheet-moduleWidget
 {
-	width: 540px;
-	padding: 5px;
+	grid-area: modules;
+	display: grid;
+	width: 535px;
+	height: 375px;
+	grid-template-columns: repeat(4,124px) 380px;
+	grid-template-rows: 32px 166px 166px;
+	grid-template-areas: "title title title title title" ". . . . launchbay" ". . . . launchbay";
+	grid-gap: 4px;
+}
+
+.sheet-moduleWidgetTitle
+{
+	grid-area: title;
 }
 
 .sheet-basicModule
@@ -3580,6 +3172,7 @@ input[type="number"].sheet-currentCharge
 /* ************ Launch Bay ************* */
 .sheet-launchBay
 {
+	grid-area: launchbay;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Shuttle.png);
 	background-size: 380px 335px;
 	background-repeat: no-repeat;
@@ -4180,17 +3773,40 @@ input[type="number"].sheet-tugReactorCharge
 
 div.sheet-shipConfig
 {
-	display: flex;
-	flex-flow: column nowrap;
+	grid-area: shipConfig;
+	display: grid;
+	grid-template-columns: repeat(4, 217px);
+	grid-template-rows: 32px 330px;
+	grid-template-areas: "title title title title" "shipSectionBow shipSectionStarboard shipSectionPort shipSectionStern";
+	grid-gap: 4px;
 	width: 900px;
+	height: 380px;
 	padding: 5px;
 }
 
-.sheet-flex-row
+.sheet-ShipConfigTitle
 {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-evenly;
+	grid-area: title;
+}
+
+.sheet-shipSectionBow
+{
+	grid-area: shipSectionBow;
+}
+
+.sheet-shipSectionStarboard
+{
+	grid-area: shipSectionStarboard;
+}
+
+.sheet-shipSectionPort
+{
+	grid-area: shipSectionPort;
+}
+
+.sheet-shipSectionStern
+{
+	grid-area: shipSectionStern;
 }
 
 .sheet-flex-col
@@ -4288,12 +3904,12 @@ input[type=number].sheet-txtfield
 	.sheet-ship-block .sheet-shipUpkeepTitle
 	{
 		font-variant: small-caps;
-		grid-column-start:8;
-		grid-column-end:9;
-		grid-row-start:2;
+		grid-column-start: 8;
+		grid-column-end: 9;
+		grid-row-start: 2;
 		grid-row-end: 3;
 		font-size: 9px;
-		align-self:center;
+		align-self: center;
 		text-align: left;
 		padding-top: 6px;
 	}
@@ -4910,7 +4526,7 @@ input[type=number].sheet-txtfield
 {
 	z-index: 10;
 	position: relative;
-	left: -21px;
+	left: -11px;
 }
 
 div.sheet-ship-default:nth-child(7) > span:nth-child(2)
@@ -4926,25 +4542,31 @@ div.sheet-ship-default:nth-child(6) > span:nth-child(2)
 /*   Color selector menu  */
 div.sheet-colorselector
 {
-	display: flex;
-	height: 20px;
-	margin: -27px 0px 6px 240px;
-	padding-left: 15px;
-	width: 280px;
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	align-self: center;
 }
 
-	div.sheet-colorselector label
-	{
-		font-weight: bold;
-		width: 132px;
-	}
-
-.sheet-colorselector select
+.sheet-colorselector > select
 {
 	height: 20px;
 	width: 125px;
 }
 
+.sheet-colorselectorTitle
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	justify-self: end;
+	font-size: 12px;
+	font-weight: 700;
+	color: white;
+	align-self: center;
+}
 /*     Sheet header layout    */
 div.sheet-header
 {
@@ -4986,6 +4608,17 @@ hr
 	margin: 10px;
 }
 
+.sheet-subtitlesGrid
+{
+	font-weight: bold;
+	background-color: #ff7d00;
+	width: 98%;
+	height: 32px;
+	padding-left: 10px;
+	vertical-align: middle;
+}
+
+
 .sheet-subtitlesFull
 {
 	font-weight: bold;
@@ -5017,10 +4650,19 @@ hr
 /* ***************************************** */
 /*				Ship Page Two				 */
 /* ***************************************** */
+.sheet-shipPG2
+{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 95px 325px 750px;
+	width: 900px;
+	grid-gap: 4px;
+	grid-template-areas: "resources letter" "cargo letter" "cargo notes" ;
+}
 
-/*				Resource Boxes				*/
 .sheet-resourceWidget
 {
+	grid-area: resources;
 	display: flex;
 	flex-flow: nowrap;
 	width: 440px;
@@ -5088,6 +4730,7 @@ input[type="number"].sheet-resourceBox
 /*				Letter of Marque			*/
 .sheet-letterOfMarque
 {
+	grid-area: letter;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/LetterofMarque.png);
 	background-size: 440px 416.49px;
 	background-repeat: no-repeat;
@@ -5165,6 +4808,7 @@ input[type="number"].sheet-resourceBox
 /*			Cargo			*/
 .sheet-cargo
 {
+	grid-area: cargo;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/AssetTradeGoods.png);
 	background-size: 440px 1066.5px;
 	background-repeat: no-repeat;
@@ -5234,6 +4878,7 @@ input[type="number"].sheet-resourceBox
 /*			Notes			*/
 .sheet-notes
 {
+	grid-area: notes;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/notes.png);
 	background-size: 440px 750px;
 	background-repeat: no-repeat;
