Fixed misaligned Static boxes for the InSec & Artery

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -4220,7 +4220,7 @@ input[type=number].sheet-txtfield
 		height: 20px;
 		width: 1px;
 	}
-
+	/* InSec & Artery Static boxes*/
 		.sheet-ship-block .sheet-ship-oct input[type="checkbox"] + span::before
 		{
 			content: "■";
@@ -4229,7 +4229,7 @@ input[type=number].sheet-txtfield
 			width: 20px;
 			height: 20px;
 			position: relative;
-			left: -27px;
+			left: -15px;
 			top: -35px;
 			text-align: center;
 			color: #8f8f8f;
@@ -4654,7 +4654,7 @@ hr
 {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 95px 325px 750px;
+	grid-template-rows: 100px 320px 750px;
 	width: 900px;
 	grid-gap: 4px;
 	grid-template-areas: "resources letter" "cargo letter" "cargo notes" ;
@@ -4888,10 +4888,6 @@ input[type="number"].sheet-resourceBox
 	grid-gap: 0px;
 	height: 750px;
 	width: 440px;
-	padding-top: 0px;
-	margin-left: 10px;
-	padding-left: 4px;
-	padding-right: 8px;
 	z-index: 0;
 }
 
