Replaced Ship patches with images
Updated version number to 1.5

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1876,7 +1876,7 @@ input[type="radio"].sheet-hideCheckbox
 	{
 		width: 100%;
 		height: 100%;
-		z-index: 1;
+		z-index: 3;
 		position: absolute;
 	}
 
@@ -1924,7 +1924,7 @@ input[type="radio"].sheet-hideCheckbox
 		position: absolute;
 	}
 
-	.sheet-launch-bay-trailer-conditions > .sheet-resiliance-slot-2
+	.sheet-launch-bay-trailer-conditions > .sheet-resiliance-slot
 	{
 		grid-area: resiliance;
 	}
@@ -2328,7 +2328,7 @@ input[type="checkbox"]:checked + span.sheet-patch
 	grid-area: systemsAmenities;
 	display: grid;
 	width: 900px;
-	height:360px;
+	height: 360px;
 	grid-template-columns: 535px 1fr;
 	grid-template-rows: 1fr;
 	grid-template-areas: "systems amenities";
@@ -3177,7 +3177,7 @@ input[type="number"].sheet-currentCharge
 	background-size: 380px 335px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 14px 40px 60px 60px 50px 14px 42px 42px 24px 25px;
+	grid-template-columns: 14px 40px 60px 60px 58px 14px 42px 42px 24px 25px;
 	grid-template-rows: 15px repeat(2,12px) 15px repeat(2,12px) repeat(5,minmax(12px, 15px)) 20px repeat(9,minmax(12px,15px))1fr;
 	grid-gap: 0px;
 	height: 335px;
@@ -3877,6 +3877,20 @@ input[type=number].sheet-txtfield
 		margin-bottom: 5px;
 	}
 
+	/* Ship Upkeep */
+	.sheet-ship-block .sheet-shipUpkeepTitle
+	{
+		font-variant: small-caps;
+		grid-column-start: 8;
+		grid-column-end: 9;
+		grid-row-start: 2;
+		grid-row-end: 3;
+		font-size: 9px;
+		align-self: center;
+		text-align: left;
+		padding-top: 6px;
+	}
+
 	.sheet-ship-block .sheet-ship-sidebar1
 	{
 		grid-column: 8 / 8;
@@ -3893,27 +3907,7 @@ input[type=number].sheet-txtfield
 		justify-content: space-evenly;
 	}
 
-	.sheet-ship-block .sheet-ship-sidebar2
-	{
-		grid-column: 8 / 8;
-		grid-row: 9 / 13;
-		display: flex;
-		justify-content: space-around;
-	}
-
-	.sheet-ship-block .sheet-shipUpkeepTitle
-	{
-		font-variant: small-caps;
-		grid-column-start: 8;
-		grid-column-end: 9;
-		grid-row-start: 2;
-		grid-row-end: 3;
-		font-size: 9px;
-		align-self: center;
-		text-align: left;
-		padding-top: 6px;
-	}
-
+	/* Ship Patches*/
 	.sheet-ship-block .sheet-shipPatchTitle
 	{
 		font-variant: small-caps;
@@ -3926,6 +3920,47 @@ input[type=number].sheet-txtfield
 		text-align: left;
 		padding-top: 9px;
 	}
+
+	.sheet-ship-block > .sheet-ship-sidebar2
+	{
+		display: grid;
+		grid-column-start: 8;
+		grid-column-end: 9;
+		grid-row-start: 9;
+		grid-row-end: 12;
+		grid-template-columns: 25px;
+		grid-template-rows: repeat(3,25px);
+		grid-template-areas: "patch1" "patch2" "patch3";
+		position: relative;
+		justify-self: end;
+		margin-top: 10px;
+		grid-gap: 2px;
+		margin-right: 4px;
+	}
+
+		.sheet-ship-block > .sheet-ship-sidebar2 > input
+		{
+			width: 100%;
+			height: 100%;
+			z-index: 3;
+			position: absolute;
+		}
+
+		.sheet-ship-block > .sheet-ship-sidebar2 > .sheet-patch1
+		{
+			grid-area: patch1;
+		}
+
+
+		.sheet-ship-block > .sheet-ship-sidebar2 > .sheet-patch2
+		{
+			grid-area: patch2;
+		}
+
+		.sheet-ship-block > .sheet-ship-sidebar2 > .sheet-patch3
+		{
+			grid-area: patch3;
+		}
 
 	/* ship section armor */
 	.sheet-ship-block .sheet-border-armor
@@ -4220,7 +4255,7 @@ input[type=number].sheet-txtfield
 		height: 20px;
 		width: 1px;
 	}
-	/* InSec & Artery Static boxes*/
+		/* InSec & Artery Static boxes*/
 		.sheet-ship-block .sheet-ship-oct input[type="checkbox"] + span::before
 		{
 			content: "■";
@@ -4657,7 +4692,7 @@ hr
 	grid-template-rows: 100px 320px 750px;
 	width: 900px;
 	grid-gap: 4px;
-	grid-template-areas: "resources letter" "cargo letter" "cargo notes" ;
+	grid-template-areas: "resources letter" "cargo letter" "cargo notes";
 }
 
 .sheet-resourceWidget
