--- a/Knight/knight.css
+++ b/Knight/knight.css
@@ -363,7 +363,7 @@ input.sheet-tabMenu[value="12"] ~ div.sheet-tab12
 	min-width:823px;
 }
 
-.sheet-ta-content > .sheet-2colrow
+.sheet-tab-content > .sheet-2colrow
 {
 	width:100%;
 	display:flex;
