--- a/Delta Green/delta_green.css
+++ b/Delta Green/delta_green.css
@@ -76,17 +76,6 @@ select option {
 			box-shadow: inset 0px 0px 55px 25px #d2cac3;
 		} 
 		
-input.sheet-derivedStat {
-	width: 37px;
-	text-align: center;
-	/*background-color: white;*/
-	/*background-color: transparent;*/
-	background-image: url("http://i.imgur.com/e1Cfspj.png");
-	color: black;
-	font-weight: bold;
-}
-
-
 .charsheet .sheet-cdiv {
     width:810px;
     /*border: 1px dotted;*/
@@ -332,7 +321,7 @@ table.sheet-attacktable {
 			width: 870px;
             padding: 0px;
             background-color: transparent;
-            background-image: url('https://i.imgur.com/mMgftma.jpg'); 
+            background-image: url('img/folder.jpg'); 
          	background-repeat: no-repeat;
             background-size: 860px 1370px;
             position: relative;
@@ -365,7 +354,7 @@ table.sheet-attacktable {
 }
 .sheet-paper {
 		background-color: transparent;
-		background-image: url('http://i.stack.imgur.com/kb0Zm.jpg');
+		background-image: url('img/paper.jpg');
     	background-size: 102% 103%;
         background-repeat: no-repeat;
         /*background-attachment: fixed;*/
@@ -462,7 +451,7 @@ table.sheet-attacktable {
     color:white;
 	font-weight: bold;
 	margin-left: -90%;
-	background-image: url("https://i.imgur.com/mA0oE5J.png");
+	background-image: url("img/Agent.png");
 	background-size: 100% 100%;
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
@@ -472,7 +461,7 @@ table.sheet-attacktable {
 
 
 .charsheet input.sheet-switch-sheet:checked ~ span.sheet-is-npc-tab{
-	background-image: url("https://i.imgur.com/iuMGFuB.png");
+	background-image: url("img/Threat.png");
 	background-size: 100% 100%;
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
@@ -480,15 +469,6 @@ table.sheet-attacktable {
     background-origin: content-box;
 }
 
-
- input[type=radio].sheet-switch-page+ span.sheet-is-npc-tab{
-	background-image: url(https://cf.geekdo-images.com/opengraph/img/-SlgzTqrBYMqWpvl-0SOVbKKqKk=/fit-in/1200x630/pic3982878.png);
-	background-size: 100% 100%;
-    background-repeat: no-repeat;
-    /*background-attachment: fixed;*/
-    background-position: center; 
-    background-origin: content-box;
-}
 
 
 input.sheet-is-npc{
