sohontLog sheet set up
sohontLog sheet set up

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -199,7 +199,7 @@ select.sheet-start
 
 select.sheet-full,
 input[type="text"].sheet-full,
-input[type="number"].sheet-full,
+input[type="number"].sheet-full
 {
 	width: 98%;
 }
@@ -325,6 +325,22 @@ textarea
 	align-items: start;
 }
 
+.sheet-sophontSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/SophontLog.png);
+	background-size: 900px 280px;
+	background-repeat: no-repeat;
+	width: 888px;
+	height: 280px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 40px 1fr 3fr 1fr 1fr 2fr 1fr;
+	grid-template-rows: 24px repeat(13,minmax(15px,18px) 1fr);
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+}
+
 /* ******************************* */
 /*			Aspects		           */
 /* ******************************* */
@@ -373,7 +389,7 @@ textarea
 	font-size: 13px;
 	width: 100%;
 	grid-column-start: 2;
-	grid-column-end: 3;
+	grid-column-end: 4;
 	grid-row-start: 1;
 	grid-row-end: 2;
 }
@@ -384,7 +400,7 @@ textarea
 	font-variant: small-caps;
 	font-weight: 500;
 	flex-flow: nowrap;
-	font-size: 14px;
+	font-size: 18px;
 	grid-column-start: 3;
 	grid-column-end: 4;
 	grid-row-start: 1;
@@ -537,11 +553,6 @@ textarea
 
 .sheet-designation
 {
-	text-align: start;
-	font-variant: small-caps;
-	font-weight: 500;
-	flex-flow: nowrap;
-	font-size: 14px;
 	grid-column-start: 1;
 	grid-column-end: 2;
 	grid-row-start: 1;
@@ -4796,7 +4807,7 @@ input[type="number"].sheet-resourceBox
 
 .sheet-letterOfMarqueGreeting
 {
-	font-size: 12px;
+	font-size: 13px;
 	text-align: left;
 	grid-column-start: 1;
 	grid-column-end: 3;
@@ -4812,13 +4823,13 @@ input[type="number"].sheet-resourceBox
 	grid-column-end: 4;
 	grid-row-start: 3;
 	grid-row-end: 4;
-	padding-left: 14px;
-	padding-top: 2px;
+	padding-left: 18px;
+	padding-top: 4px;
 }
 
 .sheet-letterOfMarquePatron
 {
-	font-size: 12px;
+	font-size: 13px;
 	font-style: italic;
 	grid-column-start: 3;
 	grid-column-end: 4;
@@ -4838,6 +4849,15 @@ input[type="number"].sheet-resourceBox
 	grid-row-end: 6;
 	padding-left: 0px;
 	padding-top: 0px;
+}
+
+.sheet-letterOfMarqueBody
+{
+	font-size: 13px;
+	line-height: 1.5em;
+	height: 95%;
+	width: 95%;
+	text-align: justify;
 }
 
 /*			Cargo			*/
@@ -4932,4 +4952,92 @@ input[type="number"].sheet-resourceBox
 	grid-column-end: 3;
 	grid-row-start: 2;
 	grid-row-end: 3;
+}
+
+/* ************* */
+/* Threat Sheets */
+/* ************* */
+
+.sheet-topLineText
+{
+	text-align: start;
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 15px;
+}
+
+.sheet-threatTextBox
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	font-weight: 500;
+	width: 100%;
+}
+
+.sheet-aliasThreat
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-aliasThreatName
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 13px;
+	width: 100%;
+	grid-column-start: 2;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-pronounThreat
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-pronounThreatName
+{
+	grid-column-start: 5;
+	grid-column-end: 8;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-sophontAspectColumnA
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-sophontTextColumnA
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-sophontTextColumnFull
+{
+	grid-column-start: 3;
+	grid-column-end: 6;
+}
+
+.sheet-sophontAspectColumnB
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
+.sheet-sophontTextColumnB
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
 }
