--- a/ICRPG extended/ICRPGextended.css
+++ b/ICRPG extended/ICRPGextended.css
@@ -23,3 +23,57 @@
 .sheet-hider:not(:checked) + span + div {
   display: none;
 }
+
+/* DivTable.com */
+ .sheet-divTable{
+     display: table;
+}
+ .sheet-divTableRow {
+     display: table-row;
+}
+ .sheet-divTableHeading {
+     display: table-header-group;
+}
+ .sheet-divTableCell, .sheet-divTableHead, .sheet-LdivTableCell {
+     display: table-cell;
+    /*border: 1px solid red;
+    */
+}
+ .sheet-divTableHeading {
+     display: table-header-group;
+}
+ .sheet-divTableFoot {
+     display: table-footer-group;
+}
+ .sheet-divTableBody {
+     display: table-row-group;
+}
+ .sheet-divTableCell {
+     text-align:center;
+     white-space: nowrap;
+     overflow: hidden;
+}
+
+
+ .sheet-LdivTableCell {
+     display: inline-block;
+     text-align:left;
+     
+     /* BLUE TABLE */
+ .sheet-blueTable {
+     width: 50%;
+     text-align: center;
+}
+ .sheet-divTable.sheet-blueTable .sheet-divTableCell, .sheet-divTable.sheet-blueTable .sheet-divTableHead {
+}
+ .sheet-divTable.sheet-blueTable .sheet-divTableBody .sheet-divTableCell {
+}
+ .sheet-divTable.sheet-blueTable .sheet-divTableHeading {
+}
+ .sheet-divTable.sheet-blueTable .sheet-divTableHeading .sheet-divTableHead {
+     font-weight: bold;
+     text-align: center;
+}
+ .sheet-blueTable .sheet-tableFootStyle {
+}
+}
