Fixed Association Bug
Fixes all unclickable dice pips in the associations widget.

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -328,14 +328,14 @@ textarea
 .sheet-sophontSheetGrid
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/SophontLog.png);
-	background-size: 900px 280px;
+	background-size: 900px 290px;
 	background-repeat: no-repeat;
-	width: 888px;
-	height: 280px;
+	width: 887px;
+	height: 285px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 40px 1fr 3fr 1fr 1fr 2fr 1fr;
-	grid-template-rows: 24px repeat(13,minmax(15px,18px) 1fr);
+	grid-template-columns: 40px 80px 2fr 90px 2fr 1fr 12px;
+	grid-template-rows: 24px repeat(13,20px) 1fr;
 	justify-items: start;
 	align-items: start;
 	padding: 6px;
@@ -1347,7 +1347,7 @@ input[type="number"].sheet-upkeepBox
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 10px repeat(2, 269px 94px 1fr);
-	grid-template-rows: 20px 16px 20px repeat(11,1fr);
+	grid-template-rows: 20px 16px 20px repeat(11,18px) 1fr;
 	grid-gap: 0px;
 	height: 250px;
 	width: 895px;
@@ -1376,6 +1376,15 @@ input[type="number"].sheet-upkeepBox
 	font-size: 9px;
 }
 
+.sheet-associationListItems
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	font-weight: 500;
+	line-height: 2em;
+}
+
 .sheet-associationSubtitleA
 {
 	grid-column-start: 2;
@@ -1386,28 +1395,28 @@ input[type="number"].sheet-upkeepBox
 	font-size: 13px;
 }
 
-.sheet-associationTypeA
+.sheet-associationTypeTitleA
 {
-	grid-row-start: 3;
-	grid-row-end: 4;
 	font-variant: small-caps;
 	font-size: 11px;
 	vertical-align: bottom;
 	text-align: center;
 	grid-column-start: 3;
 	grid-column-end: 4;
-}
-
-.sheet-associationRatingA
-{
 	grid-row-start: 3;
 	grid-row-end: 4;
+}
+
+.sheet-associationRatingTitleA
+{
 	font-variant: small-caps;
 	font-size: 11px;
 	vertical-align: bottom;
 	text-align: center;
 	grid-column-start: 4;
 	grid-column-end: 5;
+	grid-row-start: 3;
+	grid-row-end: 4;
 }
 
 .sheet-associationSubtitleB
@@ -1420,40 +1429,63 @@ input[type="number"].sheet-upkeepBox
 	font-size: 13px;
 }
 
-.sheet-associationTypeB
+.sheet-associationTypeTitleB
 {
-	grid-row-start: 3;
-	grid-row-end: 4;
 	font-variant: small-caps;
 	font-size: 11px;
 	vertical-align: bottom;
-	text-align: center;
 	grid-column-start: 6;
 	grid-column-end: 7;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-associationRatingTitleB
+{
+	font-variant: small-caps;
+	font-size: 11px;
+	vertical-align: bottom;
+	grid-column-start: 7;
+	grid-column-end: 8;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+
+.sheet-associationRatingA
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
 }
 
 .sheet-associationRatingB
 {
-	grid-row-start: 3;
-	grid-row-end: 4;
-	font-variant: small-caps;
-	font-size: 11px;
-	vertical-align: bottom;
-	text-align: center;
 	grid-column-start: 7;
 	grid-column-end: 8;
+}
+
+.sheet-associationTypeA
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-associationTypeB
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
 }
 
 .sheet-associationA
 {
 	grid-column-start: 2;
-	grid-column-end: 5;
+	grid-column-end: 3;
 }
 
 .sheet-associationB
 {
 	grid-column-start: 5;
-	grid-column-end: 8;
+	grid-column-end: 6;
 }
 
 .sheet-association1
@@ -2074,6 +2106,16 @@ span.sheet-inlinePips
 	height: 12px;
 	width: 10px;
 	margin-left: -10px;
+	vertical-align: middle;
+}
+
+span.sheet-inlinePipsLarge
+{
+	display: inline-block;
+	background-size: 24px 24px;
+	height: 25px;
+	width: 25px;
+	margin-left: -12px;
 	vertical-align: middle;
 }
 
@@ -4974,6 +5016,8 @@ input[type="number"].sheet-resourceBox
 	font-size: 13px;
 	font-weight: 500;
 	width: 100%;
+	vertical-align: baseline;
+	justify-self: center;
 }
 
 .sheet-aliasThreat
@@ -5014,6 +5058,7 @@ input[type="number"].sheet-resourceBox
 
 .sheet-sophontAspectColumnA
 {
+	justify-self: end;
 	grid-column-start: 2;
 	grid-column-end: 3;
 }
@@ -5032,6 +5077,7 @@ input[type="number"].sheet-resourceBox
 
 .sheet-sophontAspectColumnB
 {
+	justify-self: end;
 	grid-column-start: 4;
 	grid-column-end: 5;
 }
@@ -5040,4 +5086,59 @@ input[type="number"].sheet-resourceBox
 {
 	grid-column-start: 5;
 	grid-column-end: 6;
+}
+
+/* Sophont Conditions*/
+.sheet-sophontConditionWidget
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+	grid-row-start: 2;
+	grid-row-end: 14;
+	width: 175px;
+	height: 250px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 18px 1fr 25px;
+	grid-template-rows: repeat(10,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 0px;
+	justify-self: end;
+}
+
+.sheet-sophontConditionTitle
+{
+	text-align: start;
+	font-variant: small-caps;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 15px;
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+}
+
+.sheet-sophontConditionCheckbox
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	justify-self: center;
+	align-self: center;
+}
+
+.sheet-sophontConditionText
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	justify-self: center;
+}
+
+.sheet-sophontConditionArmour
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	justify-self: center;
+	align-self: center;
 }
