--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -796,14 +796,15 @@ textarea
 	background-repeat: no-repeat;
 	width: 220px;
 	display: grid;
-	grid-template-columns: 20px 1fr 1fr 25px 4px;
+	grid-template-columns: 13px 1fr 1fr 25px 10px;
 	grid-template-rows: 22px repeat(5, 25px ) 1fr;
-	grid-gap: 0px;
+	grid-column-gap: 4px;
 	height: 156px;
 	z-index: 0;
 	align-self: start;
 	justify-self: start;
 	align-items: center;
+	padding-left: 2px;
 }
 
 .sheet-conditionsTitle
@@ -1067,9 +1068,9 @@ input[type="number"].sheet-upkeepBox
 	background-size: 180px 314px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 15px 60px 1fr 15px 6px;
-	grid-template-rows: 24px 20px 18px 18px 16px 20px 12px 12px 18px 18px 18px 14px 10px 20px 18px 18px 20px 1fr;
-	grid-gap: 0px;
+	grid-template-columns: 15px 60px 1fr 20px 12px;
+	grid-template-rows: 24px 20px 20px 16px 14px 20px 12px 12px 20px 20px 18px 14px 8px 20px 20px 20px 15px 1fr;
+	grid-column-gap: 2px;
 	height: 312px;
 	width: 178px;
 	padding-top: 4px;
@@ -2115,11 +2116,22 @@ span.sheet-inlinePipsLarge
 	background-size: 24px 24px;
 	height: 25px;
 	width: 25px;
-	margin-left: -12px;
+	margin-left: -25px;
 	vertical-align: middle;
 }
 
 /* Grid Checkbox location */
+input[type="checkbox"].sheet-smallCheckbox,
+input[type="radio"].sheet-smallCheckbox
+{
+	width: 13px;
+	height: 13px;
+	margin: 0;
+	padding: 0;
+	font-size: 13px;
+	vertical-align: middle;
+}
+
 input[type="checkbox"].sheet-largeCheckbox,
 input[type="radio"].sheet-largeCheckbox
 {
@@ -2142,6 +2154,8 @@ input[type="radio"].sheet-mediumCheckbox
 	vertical-align: middle;
 }
 
+
+
 /*  Image Location  */
 span.sheet-largePips
 {
@@ -2158,6 +2172,15 @@ span.sheet-mediumPips
 	width: 19px;
 	vertical-align: middle;
 }
+
+span.sheet-smallPips
+{
+	background-size: 10px 10px;
+	height: 13px;
+	width: 13px;
+	vertical-align: middle;
+}
+
 
 
 /* Graphics */
@@ -2880,7 +2903,7 @@ input[type="number"].sheet-currentCharge
 	height: 162px;
 	width: 120px;
 	padding-top: 4px;
-	padding-left: 4px;
+	padding-left: 5px;
 	z-index: 0;
 }
 
@@ -3048,6 +3071,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 5;
 	grid-column-end: 2;
 	grid-row-end: 6;
+	justify-self: center;
 	align-self: end;
 }
 
@@ -3078,6 +3102,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 6;
 	grid-column-end: 2;
 	grid-row-end: 7;
+	justify-self: center;
 	align-self: end;
 }
 
@@ -3108,6 +3133,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 7;
 	grid-column-end: 2;
 	grid-row-end: 8;
+	justify-self: center;
 	align-self: end;
 }
 
@@ -3138,6 +3164,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 8;
 	grid-column-end: 2;
 	grid-row-end: 9;
+	justify-self: center;
 	align-self: end;
 }
 
@@ -3168,6 +3195,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 9;
 	grid-column-end: 2;
 	grid-row-end: 10;
+	justify-self: center;
 	align-self: end;
 }
 
@@ -3198,6 +3226,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 10;
 	grid-column-end: 2;
 	grid-row-end: 11;
+	justify-self: center;
 	align-self: end;
 }
 
@@ -3227,17 +3256,16 @@ input[type="number"].sheet-currentCharge
 {
 	grid-area: launchbay;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/Shuttle.png);
-	background-size: 380px 335px;
+	background-size: 385px 335px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 14px 40px 60px 60px 58px 14px 42px 42px 24px 25px;
+	grid-template-columns: 14px 40px 60px 60px 60px 15px 41px 45px 21px 25px;
 	grid-template-rows: 15px repeat(2,12px) 15px repeat(2,12px) repeat(5,minmax(12px, 15px)) 20px repeat(9,minmax(12px,15px))1fr;
 	grid-gap: 0px;
 	height: 335px;
-	width: 362px;
+	width: 381px;
 	padding-left: 6px;
 	padding-right: 12px;
-	margin-top: 4px;
 	padding-top: 4px;
 	z-index: 0;
 }
@@ -3406,7 +3434,7 @@ input[type="number"].sheet-tugReactorCharge
 
 .sheet-launchBayTugConditionTitle
 {
-	grid-column-start: 9;
+	grid-column-start: 8;
 	grid-column-end: 11;
 	grid-row-start: 2;
 	grid-row-end: 3;
@@ -3414,6 +3442,7 @@ input[type="number"].sheet-tugReactorCharge
 	flex-flow: nowrap;
 	font-size: 9px;
 	text-align: end;
+	padding-right: 6px;
 }
 
 .sheet-launchBayTugConditionResilience1
@@ -3782,7 +3811,7 @@ input[type="number"].sheet-tugReactorCharge
 
 .sheet-launchBayTrailerConditionTitle
 {
-	grid-column-start: 9;
+	grid-column-start: 8;
 	grid-column-end: 11;
 	grid-row-start: 13;
 	grid-row-end: 14;
@@ -3790,7 +3819,7 @@ input[type="number"].sheet-tugReactorCharge
 	flex-flow: nowrap;
 	font-size: 9px;
 	text-align: end;
-	padding-top: 0px;
+	padding-right: 6px;
 }
 
 .sheet-launchBayTrailerConditionResilience
@@ -5124,8 +5153,6 @@ input[type="number"].sheet-resourceBox
 {
 	grid-column-start: 1;
 	grid-column-end: 2;
-	justify-self: center;
-	align-self: center;
 }
 
 .sheet-sophontConditionText
